Update HelloDataTypesFloat.java